# deckgen

./: .env.example  AGENTS.md  Makefile  docker-compose.yml
.clinerules/: feature-branch-pr-workflow.md
.codex/: config.toml
.cursor/: mcp.json
.cursor/rules/: nautex_workflow.mdc
.nautex/: AGENTS.md  config.json
.nautex/docs/: PRD.md  TRD.md
backend/: Dockerfile  pyproject.toml  worker.py
backend/app/: main.py
frontend/: Dockerfile
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  raw_reflection_log.md  systemPatterns.md  techContext.md
