[tool.poetry]
name = "deckgen-backend"
version = "0.1.0"
description = "Backend API and worker services for deckgen"
authors = ["deckgen <dev@local>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "==0.115.0"
uvicorn = "==0.30.6"
sqlalchemy = { version = "==2.0.35", extras = ["asyncio"] }
alembic = "==1.13.2"
psycopg2-binary = "==2.9.9"
asyncpg = "==0.29.0"
procrastinate = "==2.13.0"
crewai = "==0.95.0"
openai = "==1.47.0"
pydantic-settings = "==2.5.2"
python-jose = "==3.3.0"
httpx = "==0.27.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"